added aadafruitio, reconfigured pio dirs

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+workspace_dir = .pio
+include_dir = ./Laurel/include
+lib_dir = ./Laurel/lib
+src_dir = ./Laurel/src
+test_dir = ./Laurel/test
+
 [env:featheresp32]
 platform = espressif32
 board = featheresp32
